# RayTracing

./: README.md
RayTracing/: RayTracing.sln
RayTracing/CpuRT/: CpuRT.vcxproj  CpuRT.vcxproj.filters  scene.rt  scene2.rt
RayTracing/CpuRT/dependencies/include/glad/: glad.h
RayTracing/CpuRT/dependencies/src/: glad.c
RayTracing/CpuRT/src/: application.cpp  application.h  main.cpp
RayTracing/CpuRT/src/EventSystem/EventManager/: eventManager.cpp  eventManager.h  eventType.h
RayTracing/CpuRT/src/EventSystem/Keyboard/: keyboard.cpp  keyboard.h  keyboardKey.h  keyboardKeyAction.h
RayTracing/CpuRT/src/EventSystem/Mouse/: mouse.cpp  mouse.h  mouseButton.h  mouseButtonAction.h
RayTracing/CpuRT/src/Intersection/: intersection.cpp  intersection.h  intersectionInfo.cpp  intersectionInfo.h  intersectionPoint.cpp  intersectionPoint.h  ray.cpp  ray.h
RayTracing/CpuRT/src/MVC/: controller.cpp  controller.h  model.cpp  model.h  view.cpp  view.h
RayTracing/CpuRT/src/Scene/: camera.cpp  camera.h  scene.cpp  scene.h
RayTracing/CpuRT/src/Scene/Lighting/: lightSource.cpp  lightSource.h  pointLight.cpp  pointLight.h
RayTracing/CpuRT/src/Scene/Object/: object.cpp  object.h  ray.h  sphere.cpp  sphere.h  transform.cpp  transform.h
RayTracing/CpuRT/src/Shading/: shading.cpp  shading.h
RayTracing/CpuRT/src/Utilities/: random.cpp  random.h  types.h
RayTracing/CpuRT/src/Window/: window.cpp  window.h  windowProperties.cpp  windowProperties.h
RealTimeRayTracing/: CMakeLists.txt  CMakePresets.json  imgui.ini
RealTimeRayTracing/RTRT/: CMakeLists.txt
RealTimeRayTracing/RTRT/src/: CMakeLists.txt  main.cpp
RealTimeRayTracing/RTRT/src/Application/: application.cpp
RealTimeRayTracing/dependencies/include/glad/: glad.h
RealTimeRayTracing/dependencies/lib/msvc/Debug/: glfw3.lib
RealTimeRayTracing/dependencies/lib/release/msvc/: glfw3.lib
RealTimeRayTracing/dependencies/src/: CMakeLists.txt  glad.c
RealTimeRayTracing/dependencies/src/Glad/: CMakeLists.txt  glad.c
RealTimeRayTracing/dependencies/src/ImGui/: CMakeLists.txt  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
RealTimeRayTracing/src/: CMakeLists.txt  main.cpp
RealTimeRayTracing/src/Application/: CMakeLists.txt  application.cpp  application.hpp
RealTimeRayTracing/src/Application/EventSystem/: CMakeLists.txt  IWindowListener.hpp  eventManager.cpp  eventManager.hpp
RealTimeRayTracing/src/Math/: CMakeLists.txt  intersection.hpp  mathUtils.hpp  ray.hpp  sphere.cpp  sphere.hpp  transform.hpp
RealTimeRayTracing/src/RenderingSystem/: CMakeLists.txt
RealTimeRayTracing/src/RenderingSystem/Camera/: CMakeLists.txt  camera.cpp  camera.hpp
RealTimeRayTracing/src/RenderingSystem/Lighting/: CMakeLists.txt  blinnPhong.cpp  blinnPhong.hpp  directionalLight.hpp  lightingContext.hpp  pointLight.hpp
RealTimeRayTracing/src/RenderingSystem/Material/: CMakeLists.txt  material.hpp
RealTimeRayTracing/src/RenderingSystem/Mesh/: CMakeLists.txt  mesh.cpp  mesh.hpp
RealTimeRayTracing/src/RenderingSystem/Renderer/: CMakeLists.txt  renderer.cpp  renderer.hpp
RealTimeRayTracing/src/RenderingSystem/Scene/: CMakeLists.txt  scene.cpp  scene.hpp
RealTimeRayTracing/src/RenderingSystem/Scene/IntersectionInfo/: CMakeLists.txt  intersectionInfo.hpp  intersectionType.hpp
RealTimeRayTracing/src/RenderingSystem/Scene/SceneObjects/: CMakeLists.txt  meshObject.cpp  meshObject.hpp  sphereObject.cpp  sphereObject.hpp
RealTimeRayTracing/src/RenderingSystem/TransformSystem/: CMakeLists.txt  transformManager.hpp
RealTimeRayTracing/src/RenderingSystem/Window/: CMakeLists.txt  window.cpp  window.hpp  windowMode.hpp  windowProperties.hpp
RealTimeRayTracing/src/ResourceManagers/: CMakeLists.txt  materialManager.hpp  meshManager.cpp  meshManager.hpp
RealTimeRayTracing/src/Utils/: CMakeLists.txt  cast.hpp  nonCopyable.hpp
RealTimeRayTracing/src/Utils/Date/: date.cpp  date.hpp
RealTimeRayTracing/src/Utils/FileWriter/: fileWriter.cpp  fileWriter.hpp
RealTimeRayTracing/src/Utils/ThreadPool/: threadPool.cpp  threadPool.hpp
RealTimeRayTracing/src/Utils/Timer/: timer.hpp
RealTimeRayTracing/src/math/: CMakeLists.txt  mathUtils.hpp
